# coherent

./: .gitignore  AUTOHRS  CMakeLists.txt  Makefile  NEWS  README  inline_int64_t.cc  serialize.cc  valgrind.supp
CMakeScripts/: FindLog4Cxx.cmake
Codecs/: BigEndianCodec.h  LittleEndianCodec.h  Optimizers.h  StandardCodecs.h
Encoders/: BufferEncoder.h  FileEncoder.h
Misc/: VectorOutput.h  VirtualClass.h
doc/: default.conf  source_file_template.txt
doc/general/: debug.txt  directory_structure.txt  logging.txt  modules.txt  scripts.txt  source_file_template.txt  testing.txt
doc/netserver/: specs.text
doc/serialization/: notes.txt
scripts/: add_lcov_markers.pl  dump_cfg.sh  gen_coverage.sh  gen_cscope.sh  gen_version.sh  remove_coverage.sh  sed_immed.sh
scripts/nightly/: mail_wrapper.sh  tester.sh
src/: CMakeLists.txt
src/buffercache/: CMakeLists.txt  buffer_cache.cpp  multi_buffer.cpp
src/buffercache/test/: CMakeLists.txt  multi_buffer.cpp
src/config/: CMakeLists.txt  config.cpp
src/debug/: CMakeLists.txt  common.cpp  stacktrace.cpp
src/include/: CMakeLists.txt
src/include/buffercache/: buffer_cache.h  multi_buffer.h
src/include/config/: CMakeLists.txt  cmake_config.h.in  config.h
src/include/debug/: asserts.h  common.h  stacktrace.h
src/include/journal/: abs_journal.h  absjournal.h  journal.h  journal_file.h  journal_recovery_file.h  utils.h
src/include/journal/test/: journal_mocks.h
src/include/log/: log.h
src/include/memory_manager/: allocator.h  manager.h  pthread_wrapper.h  session.h  sub_session.h
src/include/misc/: demangle.h  pimpl_generator.h  type_list.h  vector_output.h
src/include/serialization/codecs/: big_endian.h  little_endian.h  optimizers.h
src/include/serialization/encoders/: buffer_encoder.h  encoders_pimpl.h  file_encoder.h
src/include/util/: aio.h  file.h  misc.h  multi_buffer.h  thread.h  worker_pool.h
src/journal/: CMakeLists.txt  journal.cpp  journal_file.cpp  journal_recovery_file.cpp
src/journal/test/: CMakeLists.txt  journal_file_test.cpp  journal_mocks.cpp  journal_recovery_file_test.cpp  journal_test.cpp
src/log/: CMakeLists.txt  log.cpp
src/memory_manager/: CMakeLists.txt  manager.cpp  session.cpp  sub_session.cpp  thread.cpp  thread.h
src/memory_manager/test/: CMakeLists.txt  memory_manager_test.cpp
src/netserver/: CMakeLists.txt  callback.cpp  callback.h  connection.cc  connection.cpp  connection.h  echo.cc  echo.cpp  echo.h  main.cc  main.cpp  queue.h  server.cc  server.cpp  server.h  threadpool.cpp  threadpool.h  timeout.cpp  timeout.h  write_queue.cpp  write_queue.h
src/netserver/random_data_server/: CMakeLists.txt  main.cpp  random_data.cpp  random_data.h
src/netserver/test/: CMakeLists.txt  queue_test.cpp
src/serialization/: Makefile  gen_main.cc  gen_main.cpp  inline_int64_t.cpp  list_example.cc  list_example.cpp  serialize.cc  serialize.cpp  vc_example.cc  vc_example.cpp  vc_gen_test.cc  vc_gen_test.cpp  venc_test.cc  venc_test.cpp  version_test.cc  version_test.cpp
src/serialization/Codecs/: BigEndianCodec.h  LittleEndianCodec.h  Optimizers.h  StandardCodecs.h
src/serialization/Encoders/: BufferEncoder.h  EncodersPimpl.h  FileEncoder.h  VirtualDecoder.h  VirtualEncoder.h
src/serialization/Misc/: Demangle.h  PImplGenerator.h  TypeList.h  TypeTree.h  VectorOutput.h  VirtualClass.h
src/serialization/codecs/: big_endian.h  little_endian.h  optimizers.h  standard_codecs.h
src/serialization/encoders/: buffer_encoder.h  encoders_pimpl.h  file_encoder.h  virtual_decoder.h  virtual_encoder.h
src/serialization/misc/: pimpl_generator.h  pointer_policy.h  type_list.h  type_tree.h  virtual_class.h
src/server/: CMakeLists.txt  server.cpp
src/util/: CMakeLists.txt  aio.cpp  file.cpp  multi_buffer.cpp  thread.cpp
src/util/test/: CMakeLists.txt  file.cpp  multi_buffer.cpp  spin_lock_test.cpp  worker_pool.cpp
